frontend/test/should_fail/uniqueofEdge_exec.grg
using uniqueTestModelWithoutUniqueDeclarations;

rule t
{
	-e:Edge->;
	
	modify {
	---
		exec( { { uniqueof(e)==42 } } );
	}
}
